crates/livingbrain-venture/tests/snapshots/mail__venture_message_subject.snap
---
source: crates/livingbrain-venture/tests/mail.rs
expression: mail.subject
---
Living Brain this week
