crates/livingbrain-venture/tests/snapshots/mail__waitlist_confirm_subject.snap
---
source: crates/livingbrain-venture/tests/mail.rs
expression: mail.subject
---
Confirm your spot on the Living Brain waitlist
