crates/livingbrain-venture/tests/snapshots/mail__waitlist_confirmed_html.snap
---
source: crates/livingbrain-venture/tests/mail.rs
expression: mail.html
---
<!doctype html><html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/xhtml"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="x-apple-disable-message-reformatting"><meta name="format-detection" content="telephone=no,address=no,email=no,date=no,url=no"><meta name="color-scheme" content="light dark"><meta name="supported-color-schemes" content="light dark"><title>You are #42 on the Living Brain waitlist</title><style>body{margin:0!important;padding:0!important;width:100%!important}a[x-apple-data-detectors]{color:inherit!important;text-decoration:none!important}@media (max-width:620px){.cf-outer{padding:20px 12px!important}.cf-card{padding:28px 20px!important}.cf-h1{font-size:22px!important;line-height:28px!important}}@media (max-width:480px){.cf-fact-l{display:block!important;width:auto!important;padding:0 0 2px!important}.cf-fact-v{display:block!important;padding:0 0 12px!important}}@media (prefers-color-scheme:dark){.cf-bg{background:#070f11!important}.cf-card{background:#0c1719!important;border-color:#1c272a!important}.cf-ink{color:#e9f0f0!important}.cf-text{color:#b4c0c2!important}.cf-mut{color:#8e9b9e!important}.cf-code{background:#142023!important;color:#e9f0f0!important;border-color:#1c272a!important}.cf-rule{border-color:#1c272a!important}.cf-btn{background:#56f1b0!important}.cf-btn-a{color:#001d10!important}.cf-link{color:#56f1b0!important}}</style>
</head>
<body class="cf-bg" style="margin:0;padding:0;background:#f2f8f8;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%"><div style="display:none;max-height:0;max-width:0;overflow:hidden;opacity:0;mso-hide:all;font-size:1px;line-height:1px;color:#f2f8f8">Your spot is confirmed. You are number 42 in line.&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;</div>
<table role="presentation" class="cf-bg" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f2f8f8;border-collapse:collapse"><tr>
<td class="cf-outer" align="center" style="padding:32px 16px"><!--[if mso]><table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0"><tr>
<td><![endif]--><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:600px;border-collapse:separate"><tr>
<td style="padding:0 4px 20px"><a href="https://livingbrain.wiki/" style="text-decoration:none;color:#101d21"><table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
<td width="32" height="32" style="width:32px;height:32px;"><img src="https://livingbrain.wiki/assets/email/logo-64.png" width="32" height="32" alt="Living Brain" style="display:block;width:32px;height:32px;border:0;outline:none;text-decoration:none;color:#101d21;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:12px;line-height:32px;font-weight:700"></td><td class="cf-ink" style="padding-left:10px;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:20px;line-height:32px;font-weight:700;letter-spacing:-0.5px;color:#101d21">livingbrain.wiki</td></tr>
</table></a></td></tr>
<tr>
<td class="cf-card" bgcolor="#fbfefe" style="background:#fbfefe;border:1px solid #d7e0e0;border-radius:16px;padding:36px 40px;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif"><h1 class="cf-h1 cf-ink" style="margin:0 0 16px;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:26px;line-height:32px;font-weight:700;letter-spacing:-0.4px;color:#101d21">You are #42</h1>
<p class="cf-text" style="margin:0 0 20px;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:16px;line-height:24px;color:#3c4b4e">Your spot on the Living Brain waitlist is confirmed. You are number 42 in line.</p>
<table role="presentation" cellpadding="0" cellspacing="0" border="0" style="margin:4px 0 24px"><tr>
<td class="cf-btn" bgcolor="#00704e" style="border-radius:10px;background:#00704e"><a class="cf-btn-a" href="https://livingbrain.wiki/v1/waitlist/status?token=example-token" target="_blank" rel="noopener" style="display:inline-block;padding:14px 24px;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:16px;line-height:20px;font-weight:700;color:#f6fefa;text-decoration:none;border-radius:10px">Check my place</a></td></tr>
</table><p class="cf-mut" style="margin:0 0 6px;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:14px;line-height:20px;color:#4f5e62">Check your place any time:</p>
<p style="margin:0 0 24px;font-family:'JetBrains Mono',ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;font-size:13px;line-height:20px;word-break:break-all;overflow-wrap:anywhere"><a class="cf-link" href="https://livingbrain.wiki/v1/waitlist/status?token=example-token" style="color:#00704e;text-decoration:underline">https://livingbrain.wiki/v1/waitlist/status?token=example-token</a></p>
</td></tr>
<tr>
<td class="cf-mut" style="padding:24px 8px 0;font-family:'Hanken Grotesk',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;color:#4f5e62"><p style="margin:0 0 6px">Sent to ada@example.com because you confirmed your spot on the Living Brain waitlist.</p>
<p style="margin:0">Living Brain &middot; <a class="cf-mut" href="https://livingbrain.wiki/" style="color:#4f5e62;text-decoration:underline">livingbrain.wiki</a> &middot; <a class="cf-mut" href="mailto:hello@livingbrain.wiki" style="color:#4f5e62;text-decoration:underline">hello@livingbrain.wiki</a></p>
</td></tr>
</table><!--[if mso]></td></tr>
</table><![endif]--></td></tr>
</table></body></html>
