crates/livingbrain-venture/tests/snapshots/mail__waitlist_confirmed_subject.snap
---
source: crates/livingbrain-venture/tests/mail.rs
expression: mail.subject
---
You are #42 on the Living Brain waitlist
